# aws-lambda-wascc-runtime

./: .gitignore  Cargo.toml  Makefile  README.md  intro.md
builder/: .dockerignore  Dockerfile  Makefile  README.md
codec/: Cargo.toml  README.md  build.rs
codec/src/: lambda.proto  lambda.rs  lib.rs
examples/: .gitignore  Makefile  README.md  main.tf  manifest.yaml
examples/actor/: .gitignore  Cargo.toml  Makefile  README.md
examples/actor/src/: lib.rs
examples/apigw/: .gitignore  Makefile  README.md  main.tf  manifest.yaml
examples/apigw/actor/: .gitignore  Cargo.toml  Makefile  README.md
examples/custom/: Makefile  README.md  main.tf  manifest.yaml
examples/custom/actor/: Cargo.toml  Makefile  README.md
examples/custom/actor/src/: lib.rs
examples/sqs/: Makefile  README.md  main.tf  manifest.yaml
examples/sqs/actor/: Cargo.toml  Makefile
examples/sqs/actor/src/: lib.rs
layers/: .gitignore  Makefile  README.md  main.tf
provider/: Cargo.toml  README.md
provider/src/: dispatch.rs  http.rs  lambda.rs  lib.rs  provider.rs
runtime/: Cargo.toml  README.md
runtime/examples/: main.tf
runtime/src/: main.rs
runtime/src/middleware/: mod.rs  xray.rs
src/: client.rs  lambda.proto  lambda.rs  lib.rs  main.rs
