[package]
name = "aws-lambda-wascc-runtime"
version = "0.1.0"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime_core = "0.1.2"
env_logger = "0.7.1"
log = "0.4.8"
