[package]
name = "aws-lambda-runtime-provider"
version = "0.1.0"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
wascc-codec = "0.4.1"
prost = "0.6.1"
reqwest = { version = "0.10.3", features = ["blocking"] }
