[package]
name = "provider"
version = "0.7.5"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4.11"
anyhow = "1.0.31"
wascc-codec = "0.7.2"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = "1.0.114"
serde_json = "1.0.56"
codec = { path = "../codec" }
aws_lambda_events = "0.3.0"
base64 = "0.12.3"
url = "2.1.1"
thiserror = "1.0.20"

[dev-dependencies]
httptest = "0.13.1"
