[package]
name = "provider"
version = "0.8.0"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
log = "0.4.11"
anyhow = "1.0.34"
wascc-codec = "0.9.0"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = "1.0.115"
serde_json = "1.0.57"
codec = { path = "../codec" }
aws_lambda_events = "0.3.1"
base64 = "0.13.0"
url = "2.2.0"
thiserror = "1.0.22"

[dev-dependencies]
httptest = "0.13.2"
