[package]
name = "wascc-actor-hello-lambda"
version = "0.0.1"
authors = ["Kit Ewbank <Christopher.Ewbank@capitalone.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.48"
wascc-actor = "0.4.0"
aws_lambda_events = "^0.2.5"
aws-lambda-runtime-codec = { path = "../../codec", version = "^0.1" }

[profile.release]
# Optimize for small code size
opt-level = "s"

[workspace]
