[package]
name = "wascc-actor-hello-lambda"
version = "0.0.1"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.48"
wascc-actor = "0.4.0"
aws_lambda_events = "^0.2.5"
aws-lambda-runtime-codec = { path = "../../../codec" }

[profile.release]
# Optimize for small code size
opt-level = "s"

[workspace]
