[package]
name = "wascc-actor-hello-lambda"
version = "0.6.1"
authors = ["Kit Ewbank <Kit_Ewbank@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.8"
serde_json = "1.0.51"
wascc-actor = "0.7.1"
codec = { path = "../../../codec" }

[profile.release]
# Optimize for small code size
opt-level = "s"

[workspace]
